# 요구 CMake 최소 버전
CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

# 프로젝트 이름 및 버전
PROJECT ( "root_project" )

# verbose true
SET ( CMAKE_VERBOSE_MAKEFILE true )

# set environment
SET ( CMAKE_BINARY_DIR "${CMAKE_SOURCE_DIR}/build" )
SET ( PROJECT_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include" )
SET ( TORINET_DIR "${PROJECT_SOURCE_DIR}/lib" )

# print project source dir
MESSAGE ( "CMAKE_SOURCE_DIR=${CMAKE_SOURCE_DIR}" )
MESSAGE ( "PROJECT_INCLUDE_DIR=${PROJECT_INCLUDE_DIR}" )
MESSAGE ( "PROJECT_SOURCE_DIR=${PROJECT_SOURCE_DIR}" )

INCLUDE_DIRECTORIES ( ${PROJECT_INCLUDE_DIR} ${TORINET_DIR} )

# 출력 디렉토리
SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR} )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib" ) #static library

# add subdirectory list
ADD_SUBDIRECTORY( server )
#ADD_SUBDIRECTORY( client )

